--- a/_layouts/yuno.html
+++ b/_layouts/yuno.html
@@ -16,8 +16,8 @@
   <body>
 
       <header>
-        <h1>{{ title | default: site.github.repository_name }}</h1>
-        <p>{{ subtitle | default: site.description }}</p>
+        <h1>{{ title }}</h1>
+        <p>{{ subtitle }}</p>
       </header>
 
       <div id="banner">
