--- a/_layouts/yuno.html
+++ b/_layouts/yuno.html
@@ -16,8 +16,8 @@
   <body>
 
       <header>
-        <h1>{{ title }}</h1>
-        <p>{{ subtitle }}</p>
+        <h1>{{ content.title }}</h1>
+        <p>{{ content.subtitle }}</p>
       </header>
 
       <div id="banner">
