(Try) to add navigation.

--- a/_layouts/svenska.html
+++ b/_layouts/svenska.html
@@ -25,6 +25,17 @@
         <span id="logo"></span>
 
         <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
+
+        <a href="index.html" class="button"><strong>Hemsida</strong></a>
+
+        <a href="faqs.html" class="button"><strong>Frågor</strong></a>
+
+        <a href="courses.html" class="button"><strong>Kurser</strong></a>
+
+        <a href="när-man-vill.html" class="button"><strong>Uttryck</strong></a>
+
+        <a href="about.html" class="button"><strong>Om</strong></a>
+
         {% if site.show_downloads %}
 
         <div class="downloads">
