Try to fix navigation.

--- a/_layouts/svenska.html
+++ b/_layouts/svenska.html
@@ -24,8 +24,6 @@
     <div id="banner">
         <span id="logo"></span>
 
-        <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
-
         <a href="index.html" class="button"><strong>Hemsida</strong></a>
 
         <a href="faqs.html" class="button"><strong>Frågor</strong></a>
@@ -35,6 +33,8 @@
         <a href="när-man-vill.html" class="button"><strong>Uttryck</strong></a>
 
         <a href="about.html" class="button"><strong>Om</strong></a>
+
+        <a href="{{ site.github.repository_url }}" class="button" style="float: right;"><strong>View On GitHub</strong></a>
 
         {% if site.show_downloads %}
 
