Add book club to navigation.

--- a/_layouts/svenska.html
+++ b/_layouts/svenska.html
@@ -28,11 +28,13 @@
 
         <a href="index.html" class="button"><strong>Hemsida</strong></a>
 
-        <a href="faqs.html" class="button"><strong>Frågor</strong></a>
+        <a href="reading.html" class="button"><strong>Bokklubben</strong></a>
 
         <a href="courses.html" class="button"><strong>Kurser</strong></a>
 
-        <a href="när-man-vill.html" class="button"><strong>Uttryck</strong></a>
+        <a href="faqs.html" class="button"><strong>Vanliga Frågor</strong></a>
+        
+        <a href="när-man-vill.html" class="button"><strong>Uttrycka Sig</strong></a>
 
         <a href="about.html" class="button"><strong>Om</strong></a>
 
