--- a/_layouts/svenska.html
+++ b/_layouts/svenska.html
@@ -30,10 +30,10 @@
 
         <a href="reading.html" class="button"><strong>Bokklubben</strong></a>
 
-        <a href="courses.html" class="button"><strong>Kurser</strong></a>
+        <a href="courses/index.html" class="button"><strong>Kurser</strong></a>
 
         <a href="faqs.html" class="button"><strong>Vanliga Frågor</strong></a>
-        
+
         <a href="när-man-vill.html" class="button"><strong>Uttrycka Sig</strong></a>
 
         <a href="about.html" class="button"><strong>Om</strong></a>
