Make index link absolute.

--- a/_layouts/svenska.html
+++ b/_layouts/svenska.html
@@ -26,7 +26,7 @@
 
         <a href="{{ site.github.repository_url }}" class="button" style="float: right; margin-right: 50px;"><strong>View On GitHub</strong></a>
 
-        <a href="index.html" class="button"><strong>Hemsida</strong></a>
+        <a href="//index.html" class="button"><strong>Hemsida</strong></a>
 
         <a href="reading.html" class="button"><strong>Bokklubben</strong></a>
 
