--- a/_layouts/svenska.html
+++ b/_layouts/svenska.html
@@ -26,15 +26,15 @@
 
         <a href="{{ site.github.repository_url }}" class="button" style="float: right; margin-right: 50px;"><strong>View On GitHub</strong></a>
 
-        <a href="//index.html" class="button"><strong>Hemsida</strong></a>
+        <a href="{{ site.url }}index.html" class="button"><strong>Hemsida</strong></a>
 
-        <a href="reading.html" class="button"><strong>Bokklubben</strong></a>
+        <a href="{{ site.url }}reading.html" class="button"><strong>Bokklubben</strong></a>
 
-        <a href="courses/index.html" class="button"><strong>Kurser</strong></a>
+        <a href="{{ site.url }}courses/index.html" class="button"><strong>Kurser</strong></a>
 
-        <a href="faqs.html" class="button"><strong>Vanliga Frågor</strong></a>
+        <a href="{{ site.url }}faqs.html" class="button"><strong>Vanliga Frågor</strong></a>
 
-        <a href="när-man-vill.html" class="button"><strong>Uttrycka Sig</strong></a>
+        <a href="{{ site.url }}expression.html" class="button"><strong>Uttrycka Sig</strong></a>
 
         <a href="about.html" class="button"><strong>Om</strong></a>
 
