--- a/_layouts/svenska.html
+++ b/_layouts/svenska.html
@@ -26,15 +26,15 @@
 
         <a href="{{ site.github.repository_url }}" class="button" style="float: right; margin-right: 42px;"><strong>View On GitHub</strong></a>
 
-        <a href="{{ site.baseurl }}[% link index.md %}" class="button"><strong>Hemsida</strong></a>
+        <a href="{{ site.baseurl }}{% link index.md %}" class="button"><strong>Hemsida</strong></a>
 
-        <a href="{{ site.baseurl }}[% link reading.md %}" class="button"><strong>Bokklubben</strong></a>
+        <a href="{{ site.baseurl }}{% link reading.md %}" class="button"><strong>Bokklubben</strong></a>
 
-        <a href="{{ site.baseurl }}[% link index.md %}" class="button"><strong>Kurser</strong></a>
+        <a href="{{ site.baseurl }}{% link index.md %}" class="button"><strong>Kurser</strong></a>
 
-        <a href="{{ site.baseurl }}[% link faqs.md %}" class="button"><strong>Vanliga Frågor</strong></a>
+        <a href="{{ site.baseurl }}{% link faqs.md %}" class="button"><strong>Vanliga Frågor</strong></a>
 
-        <a href="{{ site.baseurl }}[% expression.md %}" class="button"><strong>Uttrycka Sig</strong></a>
+        <a href="{{ site.baseurl }}{% expression.md %}" class="button"><strong>Uttrycka Sig</strong></a>
 
         <a href="about.html" class="button"><strong>Om</strong></a>
 
