Fix missing link thing.

--- a/_layouts/svenska.html
+++ b/_layouts/svenska.html
@@ -34,7 +34,7 @@
 
         <a href="{{ site.baseurl }}{% link faqs.md %}" class="button"><strong>Vanliga Frågor</strong></a>
 
-        <a href="{{ site.baseurl }}{% expression.md %}" class="button"><strong>Uttrycka Sig</strong></a>
+        <a href="{{ site.baseurl }}{% link expression.md %}" class="button"><strong>Uttrycka Sig</strong></a>
 
         <a href="about.html" class="button"><strong>Om</strong></a>
 
