One last broken link.

--- a/_layouts/svenska.html
+++ b/_layouts/svenska.html
@@ -30,7 +30,7 @@
 
         <a href="{{ site.baseurl }}{% link reading.md %}" class="button"><strong>Bokklubben</strong></a>
 
-        <a href="{{ site.baseurl }}{% link index.md %}" class="button"><strong>Kurser</strong></a>
+        <a href="{{ site.baseurl }}{% link courses/index.md %}" class="button"><strong>Kurser</strong></a>
 
         <a href="{{ site.baseurl }}{% link faqs.md %}" class="button"><strong>Vanliga Frågor</strong></a>
 
