Try un-fixing nav.

--- a/_layouts/svenska.html
+++ b/_layouts/svenska.html
@@ -51,7 +51,7 @@
     </div>
 
     <div class="wrapper">
-        <nav>
+        <nav style="position: absolute !important; top: 0px !important;">
             <ul></ul>
         </nav>
 
