--- a/_layouts/svenska.html
+++ b/_layouts/svenska.html
@@ -59,7 +59,7 @@
         {{ content }}
         </section>
 
-        <footer>
+        <footer style="position: unset; width: 100%; margin-left: unset; left: unset; bottom: unset;">
         {% if site.github.is_project_page %}
             <p>Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
             
