--- a/_layouts/svenska.html
+++ b/_layouts/svenska.html
@@ -52,7 +52,7 @@
 
     <div class="wrapper">
         <nav style="position: absolute !important; top: 0px !important;">
-            <ul></ul>
+            <ul style="font-size: 0.8em !important;"></ul>
         </nav>
 
         <section>
