--- a/_layouts/svenska.html
+++ b/_layouts/svenska.html
@@ -9,6 +9,12 @@
 
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 
+    <style>
+nav ul li {
+    margin-bottom: 10px;
+}
+    </style>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
 <!--[if lt IE 9]>
