--- a/_layouts/svenska.html
+++ b/_layouts/svenska.html
@@ -1,90 +1,97 @@
 <!doctype html>
 <html lang="{{ site.lang | default: "en-US" }}">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="chrome=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <title>{{ site.title | default: site.github.repository_name }} by {{ site.github.owner_name }}</title>
+	<title>{{ site.title | default: site.github.repository_name }} by {{ site.github.owner_name }}</title>
 
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+	<link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 
-    <style>
-nav ul li {
-    margin-bottom: 10px;
+	<style>
+nav {
+	position: absolute !important;
+	top: 0px !important;
 }
-    </style>
+	nav ul {
+		font-size: 0.8em !important;
+	}
+	 nav ul li {
+			margin-bottom: 10px !important;
+		}
+	</style>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+	<script src="{{ '/assets/js/main.js' | relative_url }}"></script>
 <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 </head>
 <body>
-    <header>
-        <h1>{{ page.title }}</h1>
-        <p>{{ page.subtitle }}</p>
-    </header>
+	<header>
+		<h1>{{ page.title }}</h1>
+		<p>{{ page.subtitle }}</p>
+	</header>
 
-    <div id="banner">
-        <span id="logo"></span>
+	<div id="banner">
+		<span id="logo"></span>
 
-        <a href="{{ site.github.repository_url }}" class="button" style="float: right; margin-right: 42px;"><strong>View On GitHub</strong></a>
+		<a href="{{ site.github.repository_url }}" class="button" style="float: right; margin-right: 42px;"><strong>View On GitHub</strong></a>
 
-        <a href="{{ site.baseurl }}{% link index.md %}" class="button"><strong>Hemsida</strong></a>
+		<a href="{{ site.baseurl }}{% link index.md %}" class="button"><strong>Hemsida</strong></a>
 
-        <a href="{{ site.baseurl }}{% link reading.md %}" class="button"><strong>Bokklubben</strong></a>
+		<a href="{{ site.baseurl }}{% link reading.md %}" class="button"><strong>Bokklubben</strong></a>
 
-        <a href="{{ site.baseurl }}{% link courses/index.md %}" class="button"><strong>Kurser</strong></a>
+		<a href="{{ site.baseurl }}{% link courses/index.md %}" class="button"><strong>Kurser</strong></a>
 
-        <a href="{{ site.baseurl }}{% link faqs.md %}" class="button"><strong>Vanliga Frågor</strong></a>
+		<a href="{{ site.baseurl }}{% link faqs.md %}" class="button"><strong>Vanliga Frågor</strong></a>
 
-        <a href="{{ site.baseurl }}{% link expression.md %}" class="button"><strong>Uttrycka Sig</strong></a>
+		<a href="{{ site.baseurl }}{% link expression.md %}" class="button"><strong>Uttrycka Sig</strong></a>
 
-        <a href="about.html" class="button"><strong>Om</strong></a>
+		<a href="about.html" class="button"><strong>Om</strong></a>
 
-        {% if site.show_downloads %}
+		{% if site.show_downloads %}
 
-        <div class="downloads">
-            <span>Downloads:</span>
-            <ul>
-                <li><a href="{{ site.github.zip_url }}" class="button">ZIP</a></li>
-                <li><a href="{{ site.github.tar_url }}" class="button">TAR</a></li>
-            </ul>
-        </div>
-        {% endif %}
-    </div>
+		<div class="downloads">
+			<span>Downloads:</span>
+			<ul>
+				<li><a href="{{ site.github.zip_url }}" class="button">ZIP</a></li>
+				<li><a href="{{ site.github.tar_url }}" class="button">TAR</a></li>
+			</ul>
+		</div>
+		{% endif %}
+	</div>
 
-    <div class="wrapper">
-        <nav style="position: absolute !important; top: 0px !important;">
-            <ul style="font-size: 0.8em !important;"></ul>
-        </nav>
+	<div class="wrapper">
+		<nav>
+			<ul></ul>
+		</nav>
 
-        <section>
-        {{ content }}
-        </section>
+		<section>
+		{{ content }}
+		</section>
 
-        <footer style="position: unset; width: 100%; margin-left: unset; left: unset; bottom: unset;">
-        {% if site.github.is_project_page %}
-            <p>Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-            
-        {% endif %}
-            <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
-        </footer>
-    </div>
+		<footer style="position: unset; width: 100%; margin-left: unset; left: unset; bottom: unset;">
+		{% if site.github.is_project_page %}
+			<p>Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+			
+		{% endif %}
+			<p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
+		</footer>
+	</div>
 
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+	<!--[if !IE]><script>fixScale(document);</script><![endif]-->
 
 {% if site.google_analytics %}
-    <script type="text/javascript">
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        ga('create', '{{ site.google_analytics }}', 'auto');
-        ga('send', 'pageview');
-    </script>
+	<script type="text/javascript">
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		ga('create', '{{ site.google_analytics }}', 'auto');
+		ga('send', 'pageview');
+	</script>
 {% endif %}
 </body>
 </html>
