No idea if this will even work.

--- a/_layouts/svenska.html
+++ b/_layouts/svenska.html
@@ -20,6 +20,9 @@ nav {
 	 nav ul li {
 			margin-bottom: 10px !important;
 		}
+	nav ul li:after {
+		content: "<hr  />";
+	}
 	</style>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
