--- a/_layouts/svenska.html
+++ b/_layouts/svenska.html
@@ -20,16 +20,23 @@ nav {
 	 nav ul li {
 			margin-bottom: 10px !important;
 		}
-	nav ul li:after {
-		content: "<hr  />";
-	}
 	</style>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+
 	<script src="{{ '/assets/js/main.js' | relative_url }}"></script>
+
 <!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
+
+	<script>
+$(document).ready(function() {
+	$('nav ul li').each(function() {
+		$(this).append('<hr />');
+	})
+});
+	</script>
 </head>
 <body>
 	<header>
