--- a/_layouts/svenska.html
+++ b/_layouts/svenska.html
@@ -33,7 +33,7 @@ nav {
 	<script>
 $(document).ready(function() {
 	$('nav ul li').each(function() {
-		$(this).append('<hr />');
+		$(this).append('<li><hr /></li>');
 	})
 });
 	</script>
