More sidebar stuff.

--- a/_layouts/svenska.html
+++ b/_layouts/svenska.html
@@ -18,8 +18,13 @@ nav {
 		font-size: 0.8em !important;
 	}
 	 nav ul li {
-			margin-bottom: 10px !important;
-		}
+			/*margin-bottom: 10px !important;*/
+		}	
+			nav ul li hr {
+				background-color: black;
+				background-image: none !important;
+				height: 2px;
+			}
 	</style>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
