--- a/_layouts/svenska.html
+++ b/_layouts/svenska.html
@@ -17,15 +17,13 @@ nav {
 	nav ul {
 		font-size: 0.8em !important;
 	}
-	 nav ul li {
-			/*margin-bottom: 10px !important;*/
-		}	
-			nav ul li hr {
-				background-color: black;
-				background-image: none !important;
-				height: 2px !important;
-				margin: 5px !important;
-			}
+		nav ul li hr {
+			background-color: black;
+			background-image: none !important;
+			background-repeat: none;
+			height: 1px !important;
+			margin: 5px !important;
+		}
 	</style>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
