Line height, margin.

--- a/_layouts/svenska.html
+++ b/_layouts/svenska.html
@@ -17,13 +17,16 @@ nav {
 	nav ul {
 		font-size: 1.2em !important;
 	}
-		nav ul li hr {
-			background-color: black;
-			background-image: none !important;
-			background-repeat: none;
-			height: 1px !important;
-			margin: 5px !important;
+		nav ul li {
+			line-height: 1em;
 		}
+			nav ul li hr {
+				background-color: black;
+				background-image: none !important;
+				background-repeat: none;
+				height: 1px !important;
+				margin: 10px 0 5px 0 !important;
+			}
 	</style>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
