--- a/_layouts/svenska.html
+++ b/_layouts/svenska.html
@@ -18,14 +18,14 @@ nav {
 		font-size: 1.2em !important;
 	}
 		nav ul li {
-			line-height: 1em;
+			line-height: 1.2em;
 		}
 			nav ul li hr {
 				background-color: black;
 				background-image: none !important;
 				background-repeat: none;
 				height: 1px !important;
-				margin: 10px 0 5px 0 !important;
+				margin: 10px 0 !important;
 			}
 	</style>
 
