--- a/_layouts/svenska.html
+++ b/_layouts/svenska.html
@@ -18,8 +18,8 @@ nav {
 		font-size: 1.2em !important;
 	}
 		nav ul li {
-			line-height: 1.1em;
-			font-weight: normal !important;
+			line-height: 1em !important;
+			font-weight: 600 !important;
 		}
 			nav ul li hr {
 				background-color: black;
