Set on a tag, not li.

--- a/_layouts/svenska.html
+++ b/_layouts/svenska.html
@@ -17,8 +17,8 @@ nav {
 	nav ul {
 		font-size: 1.2em !important;
 	}
-		nav ul li,
-		nav ul li.tag-h1 {
+		nav ul li a,
+		nav ul li.tag-h1 a {
 			line-height: 1em !important;
 			font-weight: 600 !important;
 		}
