--- a/_layouts/svenska.html
+++ b/_layouts/svenska.html
@@ -25,9 +25,9 @@ nav {
 			font-weight: 600 !important;
 		}
 			nav ul li hr {
-				background-color: black;
+				background-color: transparent;
+				border-bottom: 1px solid black dashed;
 				background-image: none !important;
-				background-repeat: none;
 				height: 1px !important;
 				margin: 10px 0 !important;
 			}
