--- a/_layouts/svenska.html
+++ b/_layouts/svenska.html
@@ -25,8 +25,8 @@ nav {
 			font-weight: 600 !important;
 		}
 			nav ul li hr {
-				background-color: transparent;
-				border-bottom: 1px solid black dashed;
+				background-color: transparent !important;
+				border-bottom: 1px solid black dashed !important;
 				background-image: none !important;
 				height: 1px !important;
 				margin: 10px 0 !important;
