--- a/_layouts/svenska.html
+++ b/_layouts/svenska.html
@@ -26,7 +26,7 @@ nav {
 		}
 			nav ul li hr {
 				background-color: transparent !important;
-				border-bottom: 1px solid black dashed !important;
+				border-bottom: 1px dashed black !important;
 				background-image: none !important;
 				height: 1px !important;
 				margin: 10px 0 !important;
