--- a/_layouts/svenska.html
+++ b/_layouts/svenska.html
@@ -31,6 +31,10 @@ nav {
 				height: 1px !important;
 				margin: 10px 0 !important;
 			}
+
+table tr td ul {
+	margin: 0 !important;
+}
 	</style>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
